backend/kube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepmisis-api
  namespace: deepmisis-hse
  labels:
    app: dm-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dm-api
  template:
    metadata:
      labels:
        app: dm-api
    spec:
      containers:
        - name: api
          image: 0xb1b1/hse_mts_hack_api:latest
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 3333
            protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 5
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 1000m
              memory: 700Mi
            requests:
              cpu: 100m
              memory: 256Mi
