backend/kube/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: deepmisis-hse
spec:
  ingressClassName: nginx
  rules:
  - host: api.deep-misis.seizure.icu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
  tls:
    - hosts:
      - api.deep-misis.seizure.icu
      secretName: acme-cert-prod
